@@ -1,3 +1,7 @@
+2006-01-19  Marco Barisione  <barisione@gmail.com>
+
+	* gtksourceview/gtksourcecontextengine.c: added some documentation
+
 2006-01-16  Marco Barisione  <barisione@gmail.com>
 
 	* gtksourceview/gtksourcelanguage-parser-1.c: (build_keyword_list):
